[build-system]
build-backend = 'mesonpy'
requires = [
         'meson>=1.4',
         'ninja',
         'meson-python>=0.14',
         'pybind11[global]']

[project]
name = 'pymoose'
# dynamic = ['version']
version = '4.1.0dev'
description = 'Python scripting interface of MOOSE Simulator (https://moose.ncbs.res.in)'
readme = 'README.md'
classifiers = [
    'Development Status :: 5 - Production/Stable',
    'Intended Audience :: Science/Research',
    'Intended Audience :: Developers',
    'License :: OSI Approved :: GPL 3',
    'Programming Language :: C',
    'Programming Language :: C++',
    'Programming Language :: Python',
    'Programming Language :: Python :: 3',
    'Programming Language :: Python :: 3.8',
    'Programming Language :: Python :: 3.9',
    'Programming Language :: Python :: 3.10',
    'Programming Language :: Python :: 3.11',
    'Programming Language :: Python :: 3.12',
    'Programming Language :: Python :: 3.13',
    'Topic :: Software Development :: Libraries',
    'Topic :: Scientific/Engineering',
    'Operating System :: Microsoft :: Windows',
    'Operating System :: POSIX :: Linux',
    'Operating System :: POSIX',
    'Operating System :: Unix',
    'Operating System :: MacOS',
]

requires-python = '>= 3.8'
license = { file = 'LICENSE' }
authors = [
    {name = 'Upinder S. Bhalla', email = 'bhalla@ncbs.res.in'},
    {name = 'Niraj Dudani', email = ''},    
    {name = 'Subhasis Ray', email = 'ray.subhasis@gmail.com'},
    {name = 'Aditya Gilra', email = ''},
    {name = 'Aviral Goel', email = ''},
    {name = 'Dilawar Singh', email = ''},
    {name = 'Dharma Teja', email = ''},
    {name = 'Malav Shah', email = ''},
    {name = 'Dhruva Gowda', email = ''},
    {name = 'G.V. Harsharani', email = 'hrani@ncbs.res.in'},
    ]

maintainers = [
    {name = 'Upinder S. Bhalla', email = 'bhalla@ncbs.res.in'},
    {name = 'Subhasis Ray', email = 'ray.subhasis@gmail.com'},
    {name = 'G.V. Harsharani', email = 'hrani@ncbs.res.in'},
    ]

dependencies = ['numpy>=1.23', 'matplotlib', 'vpython', 'pybind11', 'python-libsbml', 'pyneuroml']

[project.urls]
homepage = 'https://moose.ncbs.res.in'
documentation = 'https://moose.ncbs.res.in/readthedocs/index.html'
repository = 'https://github.com/BhallaLab/moose-core'

[project.optional-dependencies]
test = [
     'coverage',
     'pytest',
     'pytest-cov'
]

[tool.meson-python.args]
setup = ['--default-library=static', '-Ddebug=false', '-Doptimization=3', '--vsenv']
compile = ['-j4']
dist = ['--include-subprojects']

[tool.cibuildwheel]
build = '*-macosx_* *-manylinux_x86_64 *-win_amd64 *-win_arm64'
skip = "*-win32"
test-skip = ""
free-threaded-support = false

archs = ["auto"]
build-frontend = "default"
config-settings = {}
dependency-versions = 'pinned'
environment = {}
environment-pass = []
build-verbosity = 0

before-all = 'uname -a'
before-build = ''
repair-wheel-command = ''

test-command = ''
before-test = ''
test-requires = []
test-extras = []

container-engine = 'docker'

[tool.cibuildwheel.linux]
repair-wheel-command = 'auditwheel repair -w {dest_dir} {wheel}'
manylinux-x86_64-image = 'manylinux2014'
# manylinux-i686-image = 'manylinux2014'
manylinux-aarch64-image = 'manylinux2014'
manylinux-ppc64le-image = 'manylinux2014'
manylinux-s390x-image = 'manylinux2014'
manylinux-pypy_x86_64-image = 'manylinux2014'
# manylinux-pypy_i686-image = 'manylinux2014'
manylinux-pypy_aarch64-image = 'manylinux2014'

# musllinux-x86_64-image = 'musllinux_1_2'
# musllinux-i686-image = 'musllinux_1_2'
# musllinux-aarch64-image = 'musllinux_1_2'
# musllinux-ppc64le-image = 'musllinux_1_2'
# musllinux-s390x-image = 'musllinux_1_2'
# musllinux-armv7l-image = 'musllinux_1_2'


[tool.cibuildwheel.macos]
repair-wheel-command = 'delocate-wheel --require-archs {delocate_archs} -w {dest_dir} -v {wheel}'

[tool.cibuildwheel.windows]

[tool.black]
line-length = 80
# skip-string-normalization = true
