# Author: Subhasis Ray
# Date: Sun Jul  7

biophysics_src = ['IntFire.cpp',
                  'SpikeGen.cpp',
                  'RandSpike.cpp',
                  'CompartmentDataHolder.cpp',
                  'CompartmentBase.cpp',
                  'Compartment.cpp',
                  'SymCompartment.cpp',
                  'GapJunction.cpp',
                  'ChanBase.cpp',
                  'ChanCommon.cpp',
                  'HHChannel.cpp',
                  'HHChannelBase.cpp',
                  'HHChannel2D.cpp',
                  'HHGate.cpp',
                  'HHGate2D.cpp',
                  'HHChannel2D.cpp',
                  'CaConcBase.cpp',
                  'CaConc.cpp',
                  'MgBlock.cpp',
                  'Nernst.cpp',
                  'Neuron.cpp',
                  'ReadCell.cpp',
                  'SwcSegment.cpp',
                  'ReadSwc.cpp',
                  'SynChan.cpp',
                  'NMDAChan.cpp',
                  'IzhikevichNrn.cpp',
                  'DifShellBase.cpp',
                  'DifShell.cpp',
                  'DifBufferBase.cpp',
                  'DifBuffer.cpp',
                  'MMPump.cpp',
                  'Leakage.cpp',
                  'VectorTable.cpp',
                  'MarkovRateTable.cpp',
                  'MarkovChannel.cpp',
                  'MatrixOps.cpp',
                  'MarkovSolverBase.cpp',
                  'MarkovSolver.cpp',
                  'VClamp.cpp',
                  'Spine.cpp',
                  'MarkovOdeSolver.cpp',
                  'testBiophysics.cpp']

biophysics_lib = static_library('biophysics', biophysics_src, dependencies: gsl_dep, include_directories: gsl_dep.get_variable(pkgconfig:'includedir'))
