# Author: Subhasis Ray
# Date: Sun Jul  7

biophysics_src = ['IntFire.cpp',
                  'SpikeGen.cpp',
                  'RandSpike.cpp',
                  'CompartmentDataHolder.cpp',
                  'CompartmentBase.cpp',
                  'Compartment.cpp',
                  'SymCompartment.cpp',
                  'GapJunction.cpp',
                  'ChanBase.cpp',
                  'ChanCommon.cpp',
                  'HHChannelBase.cpp',
                  'HHChannel.cpp',
                  'HHChannel2D.cpp',
                  'HHChannelF.cpp',
                  'HHGateBase.cpp',
                  'HHGate.cpp',
                  'HHGate2D.cpp',
                  'HHGateF.cpp',
                  'CaConcBase.cpp',
                  'CaConc.cpp',
                  'MgBlock.cpp',
                  'Nernst.cpp',
                  'Neuron.cpp',
                  'ReadCell.cpp',
                  'SwcSegment.cpp',
                  'ReadSwc.cpp',
                  'SynChan.cpp',
                  'NMDAChan.cpp',
                  'IzhikevichNrn.cpp',
                  'DifShellBase.cpp',
                  'DifShell.cpp',
                  'DifBufferBase.cpp',
                  'DifBuffer.cpp',
                  'MMPump.cpp',
                  'Leakage.cpp',
                  'VectorTable.cpp',
                  'MarkovRateTable.cpp',
                  'MarkovChannel.cpp',
                  'MatrixOps.cpp',
                  'MarkovSolverBase.cpp',
                  'MarkovSolver.cpp',
                  'VClamp.cpp',
                  'Spine.cpp',
                  'MarkovOdeSolver.cpp',
                  'testBiophysics.cpp']

include_directories = ['../external/exprtk']
include_directories += gsl_dep.get_variable(pkgconfig:'includedir')
biophysics_lib = static_library('biophysics', biophysics_src, dependencies: gsl_dep, include_directories: include_directories)
