include_directories(../msg)
include_directories(../basecode)
include_directories(../external/muparser/include)
add_library(moose_builtins
    Arith.cpp
    Group.cpp
    Mstring.cpp
    Func.cpp
    Function.cpp
    Variable.cpp
    InputVariable.cpp
    TableBase.cpp
    Table.cpp
    Interpol.cpp
    StimulusTable.cpp
    TimeTable.cpp
    Stats.cpp
    Interpol2D.cpp
    HDF5WriterBase.cpp
    NSDFWriter.cpp
    HDF5DataWriter.cpp
    SpikeStats.cpp
    testBuiltins.cpp
    testNSDF.cpp
    )
