# Author: Subhasis Ray
# Date: Sun Jul  7

hsolve_src = ['HSolveStruct.cpp',
              'HinesMatrix.cpp',
              'Cell.cpp',
              'HSolvePassive.cpp',
              'RateLookup.cpp',
              'HSolveActive.cpp',
              'HSolveActiveSetup.cpp',
              'HSolveInterface.cpp',
              'HSolve.cpp',
              'HSolveUtils.cpp',
              'testHSolve.cpp',
              'ZombieCompartment.cpp',
              'ZombieCaConc.cpp',
              'ZombieHHChannel.cpp']

hsolve_lib = static_library('hsolve', hsolve_src)
