# Author: Subhasis Ray
# Date: Sun Jul  7

intfire_src = ['AdExIF.cpp',
               'AdThreshIF.cpp',
               'ExIF.cpp',    
               'IntFireBase.cpp',
               'IzhIF.cpp',
               'LIF.cpp',
               'QIF.cpp',
               'testIntFire.cpp']
intfire_lib = static_library('intfire', intfire_src)
