# Author: Subhasis Ray
# Date: Sun Jul  7

mesh_src = ['ChemCompt.cpp', 
            'MeshCompt.cpp', 
            'MeshEntry.cpp', 
            'CubeMesh.cpp', 
            'CylBase.cpp', 
            'CylMesh.cpp', 
            'NeuroNode.cpp', 
            'NeuroMesh.cpp', 
            'SpineEntry.cpp', 
            'SpineMesh.cpp', 
            'PsdMesh.cpp', 
            'EndoMesh.cpp', 
            'PresynMesh.cpp', 
            'testMesh.cpp']

mesh_lib = static_library('mesh', mesh_src)
