# Author: Subhasis Ray
# Date: Sun Jul  7

msg_src = ['Msg.cpp',
           'DiagonalMsg.cpp',
           'OneToAllMsg.cpp',
           'OneToOneMsg.cpp',
           'SingleMsg.cpp',
           'SparseMsg.cpp',
           'OneToOneDataIndexMsg.cpp',
           'testMsg.cpp']

msg_lib = static_library('msg', msg_src)

